# oauth2-server

./: .gitignore  .stylish-haskell.yaml  .travis.yml  HLint.hs  LICENSE  Makefile  README.md  anchor-token-server.cabal  git-vogue.cabal  oauth2-server.cabal  proxy.sh  runit.sh  stack-7.10.yaml  stack-7.8.yaml  stack.yaml  style.css  test.sh  tokens.cabal
anchor-token-server/: anchor-token-server.cabal  style.css
anchor-token-server/lib/Anchor/Tokens/: Server.hs
anchor-token-server/lib/Anchor/Tokens/Server/: Types.hs  UI.hs
docs/: architecture.dot  client.md  installation.md  service.md  statistics.md
examples/: anchor-token-server.conf  postgresql-data.sql  shibboleth-apache.conf  shibboleth-attributes.xml  test-nginx-proxy.conf  token-server.conf  tokenserver.service
lib/Anchor/Tokens/: Server.hs
lib/Anchor/Tokens/Server/: API.hs  Configuration.hs  Statistics.hs  Store.hs  Types.hs  UI.hs
lib/Crypto/: AnchorToken.hs
lib/Network/OAuth2/: Server.hs
lib/Network/OAuth2/Server/: API.hs  App.hs  Configuration.hs  Foundation.hs  Statistics.hs  Store.hs  Types.hs  UI.hs
lib/Network/OAuth2/Server/Store/: Base.hs  PostgreSQL.hs
lib/Network/OAuth2/Server/Types/: App.hs  Auth.hs  Client.hs  Common.hs  Error.hs  Scope.hs  Token.hs
lib/Network/Wai/Middleware/: Shibboleth.hs
oauth2-server/: oauth2-server.cabal
oauth2-server-demo/: oauth2-server-demo.cabal
oauth2-server-demo/src/: Main.hs
oauth2-server-snap/: LICENSE  oauth2-server-snap.cabal
oauth2-server-snap/lib/Network/OAuth2/Server/: Snap.hs
oauth2-server/lib/Network/OAuth2/: Server.hs
oauth2-server/lib/Network/OAuth2/Server/: Configuration.hs  CryptoTokenStore.hs  TokenStore.hs  Types.hs
oauth2-server/test/: test.hs
schema/: postgresql.sql
src/: tokenserver.hs
static/: semantic.css  stylesheet.css
test/: acceptance.hs  initial-data.sql  test.hs  tokenserver.hs  tokenstore.hs  use-cases.hs
tests/: acceptance-tests.sh  roundtrip.hs  unit-tests.sh
tests/acceptance-tests/: refresh-token.sh  resource-owner-password-credentials-grant.sh
tokens/: README.md  tokens.cabal
tokens/lib/Crypto/: AnchorToken.hs
tokens/tests/: key.pem  key.pub  roundtrip.hs
ui/: main.html  navbar.css  semantic.html  stylesheet.css  tokens.html
