name:                anchor-token-server
version:             0.1.0.0
synopsis:            Service for users and services to request, approve, and
                     verify OAuth2 tokens.
description:
  Anchor Token Server is an OAuth2 server implementation. By centralising the
  OAuth2 token-management functionality, Anchor Token Server simplifies the
  implementation and operation of a fleet of services.
homepage:            https://github.com/anchor/anchor-token-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015, Anchor Systems, and others.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/anchor-token-server

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     
      Anchor.Tokens.Server
    , Anchor.Tokens.Server.API
    , Anchor.Tokens.Server.Configuration
    , Anchor.Tokens.Server.Statistics
  build-depends:
      base >=4.7 && <4.8
    , configurator
    , ekg
    , ekg-core
    , oauth2-server
    , servant
    , servant-server
    , text
    , unordered-containers

executable             tokenserver
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             tokenserver.hs
  build-depends:
      base
    , anchor-token-server

test-suite             test-tokenserver
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenserver.hs
  build-depends:
      base
    , QuickCheck
    , anchor-token-server
