name:                anchor-token-server
version:             0.1.0.0
synopsis:            Service for users and services to request, approve, and
                     verify OAuth2 tokens.
description:
  Anchor Token Server is an OAuth2 server implementation. By centralising the
  OAuth2 token-management functionality, Anchor Token Server simplifies the
  implementation and operation of a fleet of services.
homepage:            https://github.com/anchor/anchor-token-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015, Anchor Systems, and others.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/anchor-token-server

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Anchor.Tokens.Server
    , Anchor.Tokens.Server.API
    , Anchor.Tokens.Server.Configuration
    , Anchor.Tokens.Server.Statistics
    , Anchor.Tokens.Server.Store
    , Anchor.Tokens.Server.Types
  build-depends:
      base >=4.7 && <4.8
    , async
    , bytestring
    , configurator
    , ekg
    , ekg-core
    , hslogger
    , lens
    , monad-control
    , mtl
    , network
    , oauth2-server
    , pipes-concurrency
    , postgresql-simple
    , resource-pool
    , servant
    , servant-server
    , stm >=2.4.2
    , streaming-commons
    , text
    , transformers
    , transformers-base
    , transformers-compat
    , unordered-containers
    , warp

executable             tokenserver
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             tokenserver.hs
  build-depends:
      base
    , anchor-token-server
    , async
    , configurator
    , hslogger
    , stm
  ghc-options: -threaded

test-suite             test-tokenserver
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenserver.hs
  build-depends:
      base
    , QuickCheck
    , anchor-token-server

test-suite             test-tokenstore
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenstore.hs
  build-depends:
      base
    , QuickCheck
    , errors
    , async
    , lens
    , mtl
    , configurator
    , bytestring
    , time
    , text
    , oauth2-server
    , hspec 
    , process
    , pipes-concurrency
    , postgresql-simple
    , resource-pool
    , anchor-token-server
