name:                oauth2-server
version:             0.1.0.0
synopsis:            Library for OAuth2 servers.
description:         Library for OAuth2 servers.
homepage:            https://github.com/anchor/oauth2-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015 Anchor Systems, Pty Ltd and Others
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/oauth2-server

Library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Network.OAuth2.Server
                     , Network.OAuth2.Server.API
                     , Network.OAuth2.Server.Configuration
                     , Network.OAuth2.Server.Statistics
                     , Network.OAuth2.Server.Store
                     , Network.OAuth2.Server.Store.Base
                     , Network.OAuth2.Server.Store.PostgreSQL
                     , Network.OAuth2.Server.Types
                     , Network.OAuth2.Server.Types.Auth
                     , Network.OAuth2.Server.Types.Common
                     , Network.OAuth2.Server.Types.Error
                     , Network.OAuth2.Server.Types.Scope
                     , Network.OAuth2.Server.Types.Token
                     , Network.OAuth2.Server.UI
                     , Network.Wai.Middleware.Shibboleth
  build-depends:       base >=4.7 && <4.9
                     , aeson
                     , async
                     , attoparsec
                     , base64-bytestring
                     , blaze-builder
                     , blaze-html
                     , bytestring
                     , bytestring-conversion
                     , case-insensitive
                     , configurator
                     , containers
                     , errors
                     , ekg
                     , ekg-core
                     , file-embed
                     , hslogger
                     , http-types
                     , iproute
                     , lens
                     , monad-control
                     , mtl
                     , network
                     , pipes-concurrency
                     , postgresql-simple
                     , resource-pool
                     , scrypt
                     , servant >=0.4 && <0.5
                     , servant-blaze
                     , servant-server >=0.4 && <0.5
                     , stm >=2.4.2
                     , streaming-commons
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , transformers-compat
                     , unordered-containers
                     , uri-bytestring
                     , uuid
                     , vector
                     , wai
                     , warp

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

executable             tokenserver
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             tokenserver.hs
  build-depends:       base
                     , async
                     , configurator
                     , hslogger
                     , oauth2-server
                     , stm
  ghc-options: -threaded

test-suite             test-tokenserver
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenserver.hs
  build-depends:       base
                     , hspec
                     , oauth2-server
                     , QuickCheck

test-suite             test-tokenstore
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenstore.hs
  build-depends:       base
                     , async
                     , bytestring
                     , configurator
                     , errors
                     , hspec
                     , hspec-core
                     , lens
                     , mtl
                     , oauth2-server
                     , oauth2-server
                     , pipes-concurrency
                     , postgresql-simple
                     , process
                     , QuickCheck
                     , resource-pool
                     , text
                     , time

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , hoauth2
                     , hspec
                     , http-client
                     , lens
                     , lens-properties
                     , mtl
                     , oauth2-server
                     , QuickCheck
                     , quickcheck-instances
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , transformers-compat
                     , uri-bytestring
                     , warp

test-suite             test-acceptance
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             acceptance.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , HandsomeSoup
                     , hxt
                     , hoauth2
                     , hspec
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , mtl
                     , network-uri
                     , oauth2-server
                     , servant
                     , text
                     , transformers
                     , transformers-compat
                     , wreq
