name:                oauth2-server
version:             0.1.0.0
synopsis:            OAuth2 server implementation.
description:         An OAuth2 server implemented designed for use in a multi-service environment.
homepage:            https://github.com/anchor/oauth2-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015 Anchor Systems, Pty Ltd and Others
category:            Network
build-type:          Simple
cabal-version:       >=1.10
data-files:          schema/postgresql.sql
                     static/*.css
extra-source-files:  runit.sh
                     stack.yaml
                     docs/architecture.dot
                     docs/architecture.png
                     docs/client.md
                     docs/service.md
                     docs/statistics.md
                     examples/postgresql-data.sql
                     examples/token-server.conf
                     test/initial-data.sql

source-repository HEAD
  type: git
  location: https://github.com/anchor/oauth2-server

Library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Network.OAuth2.Server
                     , Network.OAuth2.Server.API
                     , Network.OAuth2.Server.App
                     , Network.OAuth2.Server.Foundation
                     , Network.OAuth2.Server.Configuration
                     , Network.OAuth2.Server.Statistics
                     , Network.OAuth2.Server.Store
                     , Network.OAuth2.Server.Store.Base
                     , Network.OAuth2.Server.Store.PostgreSQL
                     , Network.OAuth2.Server.Types
                     , Network.OAuth2.Server.Types.Auth
                     , Network.OAuth2.Server.Types.Client
                     , Network.OAuth2.Server.Types.Common
                     , Network.OAuth2.Server.Types.Error
                     , Network.OAuth2.Server.Types.Scope
                     , Network.OAuth2.Server.Types.Token
                     , Network.OAuth2.Server.UI
                     , Network.Wai.Middleware.Shibboleth
  build-depends:       aeson
                     , async
                     , attoparsec
                     , base >=4.7 && <4.9
                     , base64-bytestring
                     , blaze-builder
                     , blaze-html
                     , bytestring
                     , bytestring-conversion
                     , case-insensitive
                     , conduit
                     , configurator
                     , containers
                     , ekg
                     , ekg-core
                     , errors
                     , file-embed
                     , formatting
                     , hslogger
                     , http-types
                     , iproute
                     , lens
                     , monad-control
                     , mtl
                     , network
                     , postgresql-simple
                     , resource-pool
                     , scrypt
                     , shakespeare
                     , stm >=2.4.2
                     , streaming-commons
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , transformers-compat
                     , unordered-containers
                     , uri-bytestring
                     , uuid
                     , vector
                     , wai
                     , warp
                     , yesod-core
                     , yesod-static

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

executable             tokenserver
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             tokenserver.hs
  build-depends:       async
                     , base
                     , configurator
                     , hslogger
                     , oauth2-server
                     , stm
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts "-T -N"

test-suite             test-tokenserver
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenserver.hs
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , oauth2-server

test-suite             test-tokenstore
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tokenstore.hs
  build-depends:       QuickCheck
                     , async
                     , base
                     , bytestring
                     , configurator
                     , errors
                     , hspec
                     , hspec-core
                     , lens
                     , mtl
                     , oauth2-server
                     , oauth2-server
                     , postgresql-simple
                     , process
                     , resource-pool
                     , text
                     , time

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       QuickCheck
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , hoauth2
                     , hspec
                     , http-client
                     , lens
                     , lens-properties
                     , mtl
                     , oauth2-server
                     , quickcheck-instances
                     , text
                     , transformers
                     , transformers-compat
                     , uri-bytestring
                     , warp
                     , yesod-core

test-suite             test-acceptance
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             acceptance.hs
  build-depends:       HandsomeSoup
                     , aeson
                     , base
                     , bytestring
                     , hoauth2
                     , hspec
                     , http-client
                     , http-types
                     , hxt
                     , lens
                     , lens-aeson
                     , mtl
                     , network-uri
                     , oauth2-server
                     , text
                     , transformers
                     , transformers-compat
                     , uri-bytestring
                     , wreq
                     , yesod-core

test-suite             test-use-cases
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             use-cases.hs
  build-depends:       base
                     , filepath
                     , hspec
                     , hspec-webdriver
                     , network-uri
                     , transformers
                     , webdriver
