Name:                oauth2-server-demo
version:             0.1.0.0
synopsis:            Demonstration OAuth2 server using oauth2-server and snap.
description:         Demonstration OAuth2 server using oauth2-server and snap.
homepage:            https://github.com/anchor/oauth2-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015 Anchor Systems, Pty Ltd and Others
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Executable oauth2-server-demo
  default-language:  Haskell2010
  hs-source-dirs:    src/
  main-is:           Main.hs

  Build-depends:
      base                      >= 4     && < 5
    , MonadCatchIO-transformers >= 0.2.1 && < 0.4
    , bytestring                >= 0.9.1 && < 0.11
    , containers
    , HsOpenSSL
    , lens
    , mtl
    , mtl-compat
    , oauth2-server
    , oauth2-server-snap
    , snap                      >= 0.13  && < 0.14
    , snap-core                 >= 0.9   && < 0.10
    , snap-server               >= 0.9   && < 0.10
    , text
    , tokens
    , transformers
    , transformers-compat

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind
