name:                oauth2-server
version:             0.1.0.0
synopsis:            Library for OAuth2 servers.
description:         Library for OAuth2 servers.
homepage:            https://github.com/anchor/oauth2-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015 Anchor Systems, Pty Ltd and Others
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Network.OAuth2.Server
    , Network.OAuth2.Server.Configuration
    , Network.OAuth2.Server.Types
  build-depends:
      base >=4.7 && <4.8
    , aeson
    , base64-bytestring
    , bytestring
    , HsOpenSSL
    , mtl
    , random
    , text
    , time
    , tokens
    , transformers
