name:                oauth2-server
version:             0.1.0.0
synopsis:            Library for OAuth2 servers.
description:         Library for OAuth2 servers.
homepage:            https://github.com/anchor/oauth2-server
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2015 Anchor Systems, Pty Ltd and Others
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Network.OAuth2.Server
    , Network.OAuth2.Server.Configuration
    , Network.OAuth2.Server.CryptoTokenStore
    , Network.OAuth2.Server.Types
  build-depends:
      base >=4.7 && <4.8
    , aeson
    , base64-bytestring
    , bytestring
    , HsOpenSSL
    , containers
    , lens
    , mtl
    , random
    , text
    , time
    , tokens
    , transformers
    , transformers-compat

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >=4.7 && <5
                     , base64-bytestring
                     , containers
                     , HsOpenSSL
                     , hspec
                     , lens-properties
                     , oauth2-server
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , tokens
                     , transformers